# SelfUserBot

./: Cargo.toml  ExampleCommands.yml  ExampleConfig.yml
src/: handle_commands.rs  handle_responses.rs  init_commands.rs  interaction_endpoint.rs  main.rs
