[package]
name = "SelfUserBot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
actix-web = "4.7.0"
ed25519-dalek = { version = "1.0.1", features = ["default"] }
hex = "0.4.3"
config = { version = "0.14.0", features = ["default", "yaml"] }
lazy_static = "1.4.0"
threadpool = "1.8.1"